--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www;
+    root /var/www/public;
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -16,5 +16,17 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
+    }
+
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass unix:/var/run/php/php-fpm.sock;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
+    }
+    location ~ \.php$ {
+        return 404;
     }
 }
